--- a/static/css/style.css
+++ b/static/css/style.css
@@ -76,16 +76,20 @@ a:hover {
 
 .contact-main{
 	display: flex;
-	justify-content: flex-end;
+	flex-wrap: wrap;
+	padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .contact-form{
 	direction: rtl;
-	width: 400px;
-	margin: 20px 20px;
+	padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    margin: 20px 20px;
 }
 .contact-info{
 	direction: rtl;
-	width: 800px;
 	margin: 20px 20px;
 }
 .contact-form h2, .contact-info h2{
