--- a/templates/places_app/parts.html
+++ b/templates/places_app/parts.html
@@ -15,7 +15,7 @@
           <h3>{{place.place_name}}</h3>
           <p class="description">{{place.information}}</p>
           <p>
-            <a href="{% url "places:part_detail" id=place.id %}" class="btn btn-primary btn-block" role="button">
+            <a href="{% url 'places:part_detail' id=place.id %}" class="btn btn-primary btn-block" role="button">
               مشاهده جزئیات
             </a>
           </p>
