--- a/templates/main_template.html
+++ b/templates/main_template.html
@@ -7,7 +7,7 @@
     <title>
         {% block title %}{% endblock title %}
     </title>
-    <link rel="icon" type="image/png" href="media/images/favicon.png">
+    <link rel="icon" type="image/png" href="/media/images/favicon.png">
     <!-- css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
