--- a/templates/main_app/404.html
+++ b/templates/main_app/404.html
@@ -1,5 +1,5 @@
 <div style="width:80%; height:500px; margin:20px auto; display: block; justify-content: space-between;">
     <h1 style="text-align:center; color:red; font-size:3rem;">404 - صفحه مورد نظر یافت نشد</h1>
-    <h3 style="text-align:center;">متأسفیم، اما به نظر می‌رسد صفحه‌ای که به دنبال آن هستید وجود ندارد یا حذف شده است.</h2>
-    <a href="{% url 'main:index' %}"> &nbsp; بازگشت به صفحه اصلی</a>
+    <h2 style="text-align:center;">.متأسفیم، اما به نظر می‌رسد صفحه‌ای که به دنبال آن هستید وجود ندارد یا حذف شده است</h2>
+    <a href="{% url 'main:index' %}"><h3> &nbsp; بازگشت به صفحه اصلی</h3></a>
 </div>
